# ecommerce-analytics-dashboard

./: .gitignore  README.md  pyproject.toml
.streamlit/: config.toml
src/: app.py  export_screenshots.py  generator.py  metrics.py  significance.py
tests/: test_generator.py  test_metrics.py  test_significance.py
